Fixed missing margin in user popover

--- a/wcfsetup/install/files/style/ui/userProfile.scss
+++ b/wcfsetup/install/files/style/ui/userProfile.scss
@@ -168,7 +168,7 @@
 	position: relative;
 	
 	.userInformation {
-		padding-bottom: 16px;
+		margin-bottom: 20px;
 	}
 	
 	.buttonGroupNavigation {
